# Circonomit_Hiring_Challenge

./: README.md  pyproject.toml
task1_solution/: README.md  TASK1_IMPLEMENTATION_GUIDE.md  TASK1_RESULTS_SUMMARY.md  TASK1_SOLUTION.md  debug_calculations.py  debug_dependencies.py  run_task1_demo.py  stk_demo.py  stk_simulation.py  test_basic_simulation.py
task2_solution/: TASK2_SOLUTION.md
task3_solution/: TASK3_SOLUTION.md
task4_solution/: TASK4_SOLUTION.md
