[project]
name = "circonomit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "grandalf>=0.8",
    "ipython>=9.4.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "langsmith>=0.4.8",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "openai>=1.97.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "typing-extensions>=4.14.1",
]
